--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+ 
 }
 body{
   background-color: black;
@@ -40,4 +41,12 @@ body{
 
 .theme-btn {
 
+}
+#tsparticles{
+  overflow: hidden !important;
+  background-color: red;
+  width: 500px ;
+  height: 500px;
+  margin: 20px 50px;
+  
 }
